# hyperion-disassembler

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml  cmake-multi-platform.yml
src/: main.cpp
src/core/: types.h  undo.h
src/core/analysis/: analysis_db.h  analyzer.cpp  analyzer.h  pdb_loader.cpp
src/core/database/: database.cpp  database.h
src/core/decompiler/: cf_struct.cpp  cf_struct.h  dce.cpp  dce.h  decompiler.cpp  decompiler.h  emitter.cpp  emitter.h  expr_prop.cpp  expr_prop.h  ir.h  lifter.cpp  lifter.h  lifter_arm64.cpp  lifter_arm64.h  propagate.cpp  propagate.h  pseudo_gen.cpp  pseudo_gen.h  ssa.cpp  ssa.h  sym_exec.cpp  sym_exec.h  type_infer.cpp  type_infer.h
src/core/disasm/: disassembler.cpp  disassembler.h
src/core/loader/: dotnet_loader.cpp  pe_loader.cpp  pe_loader.h
src/core/types/: type_system.h
src/debugger/: debug_engine.cpp  debug_engine.h  instrumentation_cb.cpp  instrumentation_cb.h  process_list.cpp  process_list.h  stealth.cpp
src/scripting/: lua_engine.cpp  lua_engine.h
src/threading/: task_scheduler.cpp  task_scheduler.h  worker_pool.cpp  worker_pool.h
src/ui/: app.cpp  app.h  fonts.h  theme.h
src/ui/renderer/: imgui_backend.cpp  imgui_backend.h
src/ui/widgets/: callgraph_view.cpp  callgraph_view.h  classes_view.cpp  classes_view.h  debugger_panel.cpp  debugger_panel.h  diff_view.cpp  diff_view.h  disasm_view.cpp  disasm_view.h  entropy_view.cpp  entropy_view.h  functions_panel.cpp  functions_panel.h  graph_view.cpp  graph_view.h  hex_view.cpp  hex_view.h  imports_panel.cpp  (+20 more)
(+2 files in other folders)
